# ttmm

./: README.md  pyproject.toml  requirements.txt  ttmm
.github/workflows/: ci.yml
app/: app.py
tests/: test_ttmm.py
ttmm/: __init__.py  ai_analysis.py  cli.py  gitingest.py  index.py  metrics.py  search.py  store.py  trace.py
